--- a/index.html
+++ b/index.html
@@ -36,26 +36,35 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
           </svg>
         </button>
-  
+
         <div class="hidden md:flex items-center justify-center space-x-4 w-full">
-          <a id="nav-start" href="#start" class="nav-link text-white border-b-2 border-transparent hover:border-white">Start</a>
-          <a id="nav-lenguajes" href="#languages" class="nav-link text-white border-b-2 border-transparent hover:border-white">Skills</a>
-          <a id="nav-about" href="#about" class="nav-link text-white border-b-2 border-transparent hover:border-white">About</a>
-          <a id="nav-projects" href="#projects" class="nav-link text-white border-b-2 border-transparent hover:border-white">Projects</a>
-          <a id="nav-contact" href="#contact" class="nav-link text-white border-b-2 border-transparent hover:border-white">Contact</a>
-  
+          <a id="nav-start" href="#start"
+            class="nav-link text-white border-b-2 border-transparent hover:border-white">Start</a>
+          <a id="nav-lenguajes" href="#languages"
+            class="nav-link text-white border-b-2 border-transparent hover:border-white">Skills</a>
+          <a id="nav-about" href="#about"
+            class="nav-link text-white border-b-2 border-transparent hover:border-white">About</a>
+          <a id="nav-projects" href="#projects"
+            class="nav-link text-white border-b-2 border-transparent hover:border-white">Projects</a>
+          <a id="nav-contact" href="#contact"
+            class="nav-link text-white border-b-2 border-transparent hover:border-white">Contact</a>
+
           <div class="relative inline-block text-left">
             <button id="dropdown-button" class="flex items-center text-white focus:outline-none">
               🌐
             </button>
             <div id="dropdown-menu" class="hidden absolute left-0 z-20 mt-1 w-48 bg-white rounded-md shadow-lg">
               <div class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="dropdown-button">
-                <a href="#usa" class="flex justify-center items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
-                  <img src="https://flagcdn.com/us.svg" alt="USA" class="w-6 h-4"> 
+                <a id="translate-en" href="#"
+                  class="flex justify-center items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+                  role="menuitem">
+                  <img src="https://flagcdn.com/us.svg" alt="USA" class="w-6 h-4">
                   <span class="ml-2">EN</span>
                 </a>
-                <a href="#mexico" class="flex justify-center items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
-                  <img src="https://flagcdn.com/mx.svg" alt="Mexico" class="w-6 h-4"> 
+                <a id="translate-es" href="#"
+                  class="flex justify-center items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+                  role="menuitem">
+                  <img src="https://flagcdn.com/mx.svg" alt="Mexico" class="w-6 h-4">
                   <span class="ml-2">ES</span>
                 </a>
               </div>
@@ -63,7 +72,10 @@
           </div>
         </div>
       </div>
-  
+      </div>
+      </div>
+
+
       <!-- Menú hamburguesa -->
       <div id="mobile-menu" class="md:hidden hidden">
         <div class="flex flex-col p-4 bg-gray-800">
@@ -72,19 +84,23 @@
           <a id="nav-about" href="#about" class="text-white py-2">About</a>
           <a id="nav-projects" href="#projects" class="text-white py-2">Projects</a>
           <a id="nav-contact" href="#contact" class="text-white py-2">Contact</a>
-          
+
           <div class="relative inline-block text-left mt-2">
             <button id="dropdown-button-mobile" class="flex items-center text-white">
               🌐
             </button>
             <div id="dropdown-menu-mobile" class="hidden absolute left-0 z-20 mt-1 w-48 bg-white rounded-md shadow-lg">
               <div class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="dropdown-button-mobile">
-                <a href="#usa" class="flex justify-center items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
-                  <img src="https://flagcdn.com/us.svg" alt="USA" class="w-6 h-4"> 
+                <a href="#usa"
+                  class="flex justify-center items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+                  role="menuitem">
+                  <img src="https://flagcdn.com/us.svg" alt="USA" class="w-6 h-4">
                   <span class="ml-2">EN</span>
                 </a>
-                <a href="#mexico" class="flex justify-center items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
-                  <img src="https://flagcdn.com/mx.svg" alt="Mexico" class="w-6 h-4"> 
+                <a href="#mexico"
+                  class="flex justify-center items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+                  role="menuitem">
+                  <img src="https://flagcdn.com/mx.svg" alt="Mexico" class="w-6 h-4">
                   <span class="ml-2">ES</span>
                 </a>
               </div>
@@ -94,30 +110,26 @@
       </div>
     </nav>
   </header>
-  
 
-<script>
-  // Toggle mobile menu
-  const hamburger = document.getElementById('hamburger');
-  const mobileMenu = document.getElementById('mobile-menu');
+  <script>
+    // Toggle mobile menu
+    const hamburger = document.getElementById('hamburger');
+    const mobileMenu = document.getElementById('mobile-menu');
 
-  hamburger.addEventListener('click', () => {
-    mobileMenu.classList.toggle('hidden');
-  });
+    hamburger.addEventListener('click', () => {
+      mobileMenu.classList.toggle('hidden');
+    });
 
-  // Toggle dropdown menu in mobile view
-  const dropdownButtonMobile = document.getElementById('dropdown-button-mobile');
-  const dropdownMenuMobile = document.getElementById('dropdown-menu-mobile');
+    // Toggle dropdown menu in mobile view
+    const dropdownButtonMobile = document.getElementById('dropdown-button-mobile');
+    const dropdownMenuMobile = document.getElementById('dropdown-menu-mobile');
 
-  dropdownButtonMobile.addEventListener('click', () => {
-    dropdownMenuMobile.classList.toggle('hidden');
-  });
-</script>
+    dropdownButtonMobile.addEventListener('click', () => {
+      dropdownMenuMobile.classList.toggle('hidden');
+    });
+  </script>
 
-  
-  
-
-
+  <!-- Seccion hero -->
   <main>
     <section data-aos="fade-up" data-aos-duration="1500">
       <div class="w-full h-screen relative fondo" id="start">
@@ -154,9 +166,10 @@
                     CV</a></button>
 
                 <button type="button"
-                  class=" mt-10 text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
+                  class=" mt-10 text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700 "
                   data-aos="fade-left" data-aos-delay="400"><a href="cv.pdf" download="cv.pdf" id="cv">Download
                     CV</a></button>
+
 
               </div>
 
@@ -185,8 +198,8 @@
 
 
 
-          <div class="featured-image">
-            <img class="imagen-hero" src="img/fondo.JPG" alt="My Pic" />
+          <div class="">
+            <img class="md:size-96 size-72 rounded-full mr-96" src="img/pp.png" alt="My Pic" />
           </div>
         </div>
       </div>
@@ -194,10 +207,10 @@
       </div>
 
     </section>
-
   </main>
 
-  <section class="text-gray-700 body-font mt-40 border-b-4 border-gray-700" id="languages">
+  <!-- Seccion Skills -->
+  <section class="text-gray-700 body-font py-20 border-b-4 " id="languages">
     <br>
     <div id="frameworks" class="flex justify-center mt-10 text-4xl font-bold text-black mx-auto" data-aos="fade-up"
       data-aos-delay="100">
@@ -290,21 +303,17 @@
       </div>
   </section>
 
-
-
-
-
-
-  <section class="p-4  border-b-4 border-gray-700" id="about">
+  <!-- Seccion about -->
+  <section class="p-4 py-60 border-b-4  bg-gray-900" id="about">
     <div class="container mx-auto mt-20 mb-40">
       <h2 id="tituloabout"
-        class=" text-black flex justify-center mt-10 text-4xl font-regular text-black mx-auto font-bold"
+        class=" text-black flex justify-center mt-10 text-4xl font-regular text-white mx-auto font-bold"
         data-aos="fade-right" data-aos-delay="100">About Me</h2>
-      <h3 id="webd" class="flex items-center text-2xl text-black justify-center mt-3 mx-auto font-semibold"
+      <h3 id="webd" class="flex items-center text-2xl text-white justify-center mt-3 mx-auto font-semibold"
         data-aos="fade-right" data-aos-delay="200">
         An enthusiast Developer 💻
       </h3>
-      <p id="textoaboutme" class="text-lg mt-4" data-aos="fade-right" data-aos-delay="300">
+      <p id="textoaboutme" class="text-lg mt-4 text-white" data-aos="fade-right" data-aos-delay="300">
         Hello! I am a passionate software engineer with a solid background in application development and an insatiable
         thirst to learn and grow in the world of technology. With a curious mind and a passion for solving problems, my
         goal is to create innovative solutions that make life easier and more efficient for people.
@@ -331,6 +340,7 @@
 
 
 
+  <!-- Seccion projects -->
   <section id="projects" class="portfolio-section py-16 px-4 ">
     <div class="container mx-auto  mt-20">
       <div class="text-center mb-12">
@@ -541,7 +551,43 @@
   </section>
 
 
-  <footer class="bg-black text-white py-8" id="contact">
+  <!-- Contact Section -->
+  <section class="bg-gray-200 py-40 mb-0 ">
+    <div class="container mx-auto px-4">
+      <h2 class="text-4xl font-bold mb-8 text-center">✉️ Get in Touch!</h2>
+      <div class="max-w-md mx-auto">
+        <form action="https://fabform.io/f/xxxxx" method="post" class="space-y-4">
+          <div>
+            <label for="name" class="block font-bold mb-2">Your Name</label>
+            <input type="text" id="name" name="name"
+              class="w-full border-gray-300 rounded-md px-4 py-2 focus:outline-none focus:border-blue-500"
+              placeholder="Enter your name">
+          </div>
+          <div>
+            <label for="email" class="block font-bold mb-2">Your Email</label>
+            <input type="email" id="email" name="email"
+              class="w-full border-gray-300 rounded-md px-4 py-2 focus:outline-none focus:border-blue-500"
+              placeholder="Enter your email">
+          </div>
+          <div>
+            <label for="message" class="block font-bold mb-2">Your Message</label>
+            <textarea name="message" id="message" rows="4"
+              class="w-full border-gray-300 rounded-md px-4 py-2 focus:outline-none focus:border-blue-500"
+              placeholder="Enter your message"></textarea>
+          </div>
+          <button type="submit"
+            class="bg-blue-600 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-700 transition duration-300">Send
+            Message 🚀</button>
+        </form>
+        <p class="mt-4 text-center">Prefer email? Send me an email <a target=_blank"
+            href="https://veilmail.io/irish-geoff"
+            class="text-blue-600 font-bold hover:underline">https://veilmail.io/irish-geoff</a> instead!</p>
+      </div>
+    </div>
+  </section>
+
+
+  <footer class="bg-black text-white mt-0 py-8" id="contact">
     <div class="container mx-auto flex flex-col items-center justify-center">
       <h2 id="contacto" class="text-2xl font-bold mb-8" data-aos="">Contact</h2>
       <div class="flex space-x-6">
