arregle el circulo del hero

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
 
           <div class="">
-            <img class="md:size-96 size-72 rounded-full mr-96" src="img/pp.png" alt="My Pic" />
+            <img class="md:size-96 size-72 rounded-full mr-96 img-hero" src="img/pp.png" alt="My Pic" />
           </div>
         </div>
       </div>
