commit agregue react projects

--- a/index.html
+++ b/index.html
@@ -147,107 +147,55 @@
 
 
   <!-- Seccion Skills -->
-  <section class="text-gray-700 body-font py-10 border-b-4  " id="skills">
+  <section class="text-gray-700 body-font py-10 mb-10" id="skills">
     <br>
     <div id="frameworks" class="flex justify-center mt-10 text-4xl font-extrabold leading-tight text-black mx-auto"
       data-aos="fade-up" data-aos-delay="100">
       Habilidades
     </div>
     <div class="container px-5 py-12 mx-auto">
-      <div class="flex flex-wrap text-center justify-center">
-        <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="100">
-          <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
-            <div class="flex justify-center">
-              <img src="img/html.svg" class="w-32 h-32 mb-3 img-fixed-size">
-            </div>
-          </div>
+      <!-- Grid for images -->
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 justify-items-center">
+        <div class="group transform transition duration-500 hover:scale-110" data-aos="fade-up" data-aos-delay="100">
+          <img src="img/html.svg" class="w-24 h-24 mb-3 group-hover:opacity-90">
         </div>
-
-        <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="200">
-          <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
-            <div class="flex justify-center">
-              <img src="img/css.svg" class="w-32 h-32 mb-3 img-fixed-size">
-            </div>
-          </div>
+        <div class="group transform transition duration-500 hover:scale-110" data-aos="fade-up" data-aos-delay="200">
+          <img src="img/css.svg" class="w-24 h-24 mb-3 group-hover:opacity-90">
         </div>
-
-        <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="300">
-          <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
-            <div class="flex justify-center">
-              <img src="img/js.svg" class="w-32 h-32 mb-3 img-fixed-size">
-            </div>
-          </div>
+        <div class="group transform transition duration-500 hover:scale-110" data-aos="fade-up" data-aos-delay="300">
+          <img src="img/js.svg" class="w-24 h-24 mb-3 group-hover:opacity-90">
         </div>
-
-        <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="400">
-          <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
-            <div class="flex justify-center">
-              <img src="img/php.svg" class="w-32 h-32 mb-3 img-fixed-size">
-            </div>
-          </div>
+        <div class="group transform transition duration-500 hover:scale-110" data-aos="fade-up" data-aos-delay="400">
+          <img src="img/react.svg" class="w-24 h-24 mb-3 group-hover:opacity-90">
+        </div>
+        <div class="group transform transition duration-500 hover:scale-110" data-aos="fade-up" data-aos-delay="500">
+          <img src="img/c.svg" class="w-24 h-24 mb-3 group-hover:opacity-90">
+        </div>
+        <div class="group transform transition duration-500 hover:scale-110" data-aos="fade-up" data-aos-delay="600">
+          <img src="img/python.svg" class="w-24 h-24 mb-3 group-hover:opacity-90">
+        </div>
+        <div class="group transform transition duration-500 hover:scale-110" data-aos="fade-up" data-aos-delay="700">
+          <img src="img/php.svg" class="w-24 h-24 mb-3 group-hover:opacity-90">
+        </div>
+        <div class="group transform transition duration-500 hover:scale-110" data-aos="fade-up" data-aos-delay="800">
+          <img src="img/tailwind.svg" class="w-24 h-24 mb-3 group-hover:opacity-90">
+        </div>
+        <div class="group transform transition duration-500 hover:scale-110" data-aos="fade-up" data-aos-delay="900">
+          <img src="img/git.svg" class="w-24 h-24 mb-3 group-hover:opacity-90">
+        </div>
+        <div class="group transform transition duration-500 hover:scale-110" data-aos="fade-up" data-aos-delay="1000">
+          <img src="img/bootstrap.svg" class="w-24 h-24 mb-3 group-hover:opacity-90">
+        </div>
+        <div class="group transform transition duration-500 hover:scale-110" data-aos="fade-up" data-aos-delay="1100">
+          <img src="img/github.svg" class="w-24 h-24 mb-3 group-hover:opacity-90">
+        </div>
+        <div class="group transform transition duration-500 hover:scale-110" data-aos="fade-up" data-aos-delay="1200">
+          <img src="img/sql.svg" class="w-24 h-24 mb-3 group-hover:opacity-90">
         </div>
       </div>
-
-      <div class="container px-5 py-12 mx-auto">
-        <div class="flex flex-wrap text-center justify-center">
-          <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="500">
-            <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
-              <div class="flex justify-center">
-                <img src="img/c.svg" class="w-32 h-32 mb-3 img-fixed-size">
-              </div>
-            </div>
-          </div>
-
-          <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="600">
-            <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
-              <div class="flex justify-center">
-                <img src="img/python.svg" class="w-32 h-32 mb-3 img-fixed-size">
-              </div>
-            </div>
-          </div>
-
-          <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="700">
-            <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
-              <div class="flex justify-center">
-                <img src="img/bootstrap.svg" class="w-32 h-32 mb-3 img-fixed-size">
-              </div>
-            </div>
-          </div>
-
-          <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="800">
-            <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
-              <div class="flex justify-center">
-                <img src="img/tailwind.svg" class="w-32 h-32 mb-3 img-fixed-size">
-              </div>
-            </div>
-          </div>
-          <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="900">
-            <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
-              <div class="flex justify-center">
-                <img src="img/git.svg" class="w-32 h-32 mb-3 img-fixed-size">
-              </div>
-            </div>
-          </div>
-
-          <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="1000">
-            <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
-              <div class="flex justify-center">
-                <img src="img/github.svg" class="w-32 h-32 mb-3 img-fixed-size">
-              </div>
-            </div>
-          </div>
-
-          <div class="p-4 md:w-1/4 sm:w-1/2" data-aos="fade-up" data-aos-delay="1000">
-            <div class="px-4 py-6 transform transition duration-500 hover:scale-110">
-              <div class="flex justify-center">
-                <img src="img/sql.svg" class="w-32 h-32 mb-3 img-fixed-size">
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
+    </div>
   </section>
+
 
   <section class="border-b-4 bg-gray-900 py-10 xl:py-5 2xl:py-60" id="about">
     <div class="container mx-auto px-6 md:px-16 lg:px-24 xl:px-32 mt-20 mb-40">
@@ -483,6 +431,50 @@
           </a>
         </div>
 
+
+        <!-- proyecto 1 -->
+        <div
+          class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden transform hover:scale-110 transition duration-300"
+          data-aos="fade-right" data-aos-delay="200">
+          <a href="https://github.com/JOFIEL15/appclima">
+            <!-- Contenedor del carrusel con Swiper -->
+            <div class="swiper-container">
+              <div class="swiper-wrapper">
+                <!-- Slides del carrusel -->
+                <div class="swiper-slide">
+                  <img class="w-full h-60 object-cover" src="img/clima.webp" alt="Proyecto 1">
+                </div>
+                <div class="swiper-slide">
+                  <img class="w-full h-60 object-cover" src="img/clima4.webp" alt="Proyecto 1 - Imagen 2">
+                </div>
+                <div class="swiper-slide">
+                  <img class="w-full h-60 object-cover" src="img/clima2.webp" alt="Proyecto 1 - Imagen 3">
+                </div>
+
+                <div class="swiper-slide">
+                  <img class="w-full h-60 object-cover" src="img/clima3.webp" alt="Proyecto 1 - Imagen 4">
+                </div>
+
+              </div>
+            </div>
+
+            <div
+              class="absolute top-0 left-0 right-0 bottom-0 bg-gradient-to-r from-white to-blue-500 opacity-0 transition duration-300 ease-in-out group-hover:opacity-70">
+            </div>
+            <div class="p-4 flex flex-col items-center justify-between relative z-10">
+              <h3 id="" class="text-lg font-medium text-txt group-hover:text-gray-dark">
+                App de Clima con API
+              </h3>
+              <span class="text-sm font-bold text-black group-hover:text-indigo-500 dev">Desarrollado con:</span>
+              <div class="flex flex-row mt-2">
+                <img class="w-10 h-10" src="img/react.svg" alt="">
+                <img class="w-10 h-10" src="img/js.svg" alt="">
+                <img class="w-10 h-10 ml-2" src="img/api.svg" alt="">
+              </div>
+            </div>
+          </a>
+        </div>
+
         <!-- proyecto 5 -->
         <div
           class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden transform hover:scale-110 transition duration-300"
@@ -522,6 +514,42 @@
                 <img class="w-10 h-10" src="img/sql.svg" alt="">
               </div>
 
+            </div>
+          </a>
+        </div>
+
+        <!-- proyecto 1 -->
+        <div
+          class="group portfolio-item relative hover:shadow-lg shadow-md rounded-lg overflow-hidden transform hover:scale-110 transition duration-300"
+          data-aos="fade-right" data-aos-delay="200">
+          <a href="https://github.com/JOFIEL15/picture-of-the-day-api-nasa-react">
+            <!-- Contenedor del carrusel con Swiper -->
+            <div class="swiper-container">
+              <div class="swiper-wrapper">
+                <!-- Slides del carrusel -->
+                <div class="swiper-slide">
+                  <img class="w-full h-60 object-cover" src="img/apod.webp" alt="Proyecto 1">
+                </div>
+                <div class="swiper-slide">
+                  <img class="w-full h-60 object-cover" src="img/apod2.webp" alt="Proyecto 1 - Imagen 2">
+                </div>
+
+              </div>
+            </div>
+
+            <div
+              class="absolute top-0 left-0 right-0 bottom-0 bg-gradient-to-r from-white to-blue-500 opacity-0 transition duration-300 ease-in-out group-hover:opacity-70">
+            </div>
+            <div class="p-4 flex flex-col items-center justify-between relative z-10">
+              <h3 id="" class="text-lg font-medium text-txt group-hover:text-gray-dark">
+                Foto del Dia Nasa con API
+              </h3>
+              <span class="text-sm font-bold text-black group-hover:text-indigo-500 dev">Desarrollado con:</span>
+              <div class="flex flex-row mt-2">
+                <img class="w-10 h-10" src="img/react.svg" alt="">
+                <img class="w-10 h-10" src="img/js.svg" alt="">
+                <img class="w-10 h-10 ml-2" src="img/api.svg" alt="">
+              </div>
             </div>
           </a>
         </div>
@@ -683,9 +711,9 @@
         </form>
       </div>
       <div class="text-center mt-6">
-        <p class="text-lg font-semibold text-gray-300" data-aos="fade-up" data-aos-delay="800">También puedes
+        <p class="text-lg font-semibold text-gray-300" data-aos="fade-up" data-aos-delay="100">También puedes
           contactarme en:</p>
-        <div class="flex justify-center space-x-4 mt-4" data-aos="fade-up" data-aos-delay="900">
+        <div class="flex justify-center space-x-4 mt-4" data-aos="fade-up" data-aos-delay="200">
           <a href="https://github.com/JOFIEL15" target="_blank"
             class="text-gray-300 transition-transform transform hover:scale-110"><i class="fab fa-github fa-2x"></i></a>
           <a href="https://mx.linkedin.com/in/jofiel-alfredo-ontiveros-rivera-48583022b" target="_blank"
